crates/analyzer/tests/snapshots/analysis__return_bool_true.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ return_bool_true.fe:2:5
  │  
2 │ ╭     pub fn bar() -> bool {
3 │ │         return true
4 │ │     }
  │ ╰─────^ self: None, params: [] -> bool

note: 
  ┌─ return_bool_true.fe:3:16
  │
3 │         return true
  │                ^^^^ bool


