crates/analyzer/tests/snapshots/analysis__return_complex_struct.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ return_complex_struct.fe:2:5
  │
2 │     pub inner_x: i32
  │     ^^^^^^^^^^^^^^^^ i32
3 │     pub inner_y: i32
  │     ^^^^^^^^^^^^^^^^ i32

note: 
  ┌─ return_complex_struct.fe:7:5
  │
7 │     pub inner: StaticInner
  │     ^^^^^^^^^^^^^^^^^^^^^^ StaticInner
8 │     pub outer_x: i256
  │     ^^^^^^^^^^^^^^^^^ i256

note: 
   ┌─ return_complex_struct.fe:12:5
   │
12 │     pub string: String<8>
   │     ^^^^^^^^^^^^^^^^^^^^^ String<8>
13 │     pub outer_x: i32
   │     ^^^^^^^^^^^^^^^^ i32

note: 
   ┌─ return_complex_struct.fe:17:5
   │
17 │     pub bytes: Array<u8, 8>
   │     ^^^^^^^^^^^^^^^^^^^^^^^ Array<u8, 8>
18 │     pub outer_x: i32
   │     ^^^^^^^^^^^^^^^^ i32

note: 
   ┌─ return_complex_struct.fe:22:5
   │
22 │     pub bytes_complex: BytesComplex
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ BytesComplex
23 │     pub static_complex: StaticComplex
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ StaticComplex
24 │     pub string_complex: StringComplex
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ StringComplex

note: 
   ┌─ return_complex_struct.fe:29:5
   │  
29 │ ╭     pub fn static_complex(self) -> StaticComplex {
30 │ │         let inner: StaticInner = StaticInner(inner_x: 10, inner_y: 20)
31 │ │         let complex: StaticComplex = StaticComplex(inner, outer_x: 30)
32 │ │         return complex
33 │ │     }
   │ ╰─────^ params: [self] -> StaticComplex

note: 
   ┌─ return_complex_struct.fe:30:13
   │
30 │         let inner: StaticInner = StaticInner(inner_x: 10, inner_y: 20)
   │             ^^^^^ StaticInner
31 │         let complex: StaticComplex = StaticComplex(inner, outer_x: 30)
   │             ^^^^^^^ StaticComplex

note: 
   ┌─ return_complex_struct.fe:30:55
   │
30 │         let inner: StaticInner = StaticInner(inner_x: 10, inner_y: 20)
   │                                                       ^^           ^^ i32
   │                                                       │             
   │                                                       i32

note: 
   ┌─ return_complex_struct.fe:30:34
   │
30 │         let inner: StaticInner = StaticInner(inner_x: 10, inner_y: 20)
   │                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ StaticInner
31 │         let complex: StaticComplex = StaticComplex(inner, outer_x: 30)
   │                                                    ^^^^^           ^^ i256
   │                                                    │                
   │                                                    StaticInner -Copy-> StaticInner

note: 
   ┌─ return_complex_struct.fe:31:38
   │
31 │         let complex: StaticComplex = StaticComplex(inner, outer_x: 30)
   │                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ StaticComplex
32 │         return complex
   │                ^^^^^^^ StaticComplex -Copy-> StaticComplex

note: 
   ┌─ return_complex_struct.fe:36:5
   │  
36 │ ╭     pub fn string_complex(self) -> StringComplex {
37 │ │         let complex: StringComplex = StringComplex(string: "Hello", outer_x: 30)
38 │ │         return complex
39 │ │     }
   │ ╰─────^ params: [self] -> StringComplex

note: 
   ┌─ return_complex_struct.fe:37:13
   │
37 │         let complex: StringComplex = StringComplex(string: "Hello", outer_x: 30)
   │             ^^^^^^^ StringComplex

note: 
   ┌─ return_complex_struct.fe:37:60
   │
37 │         let complex: StringComplex = StringComplex(string: "Hello", outer_x: 30)
   │                                                            ^^^^^^^           ^^ i32
   │                                                            │                  
   │                                                            String<8> -Copy-> String<8>

note: 
   ┌─ return_complex_struct.fe:37:38
   │
37 │         let complex: StringComplex = StringComplex(string: "Hello", outer_x: 30)
   │                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ StringComplex
38 │         return complex
   │                ^^^^^^^ StringComplex -Copy-> StringComplex

note: 
   ┌─ return_complex_struct.fe:41:5
   │  
41 │ ╭     pub fn bytes_complex(self) -> BytesComplex {
42 │ │         let complex: BytesComplex = BytesComplex(bytes: [1, 2, 3, 4, 5, 6, 7, 8], outer_x: 30)
43 │ │         return complex
44 │ │     }
   │ ╰─────^ params: [self] -> BytesComplex

note: 
   ┌─ return_complex_struct.fe:42:13
   │
42 │         let complex: BytesComplex = BytesComplex(bytes: [1, 2, 3, 4, 5, 6, 7, 8], outer_x: 30)
   │             ^^^^^^^ BytesComplex

note: 
   ┌─ return_complex_struct.fe:42:58
   │
42 │         let complex: BytesComplex = BytesComplex(bytes: [1, 2, 3, 4, 5, 6, 7, 8], outer_x: 30)
   │                                                          ^  ^  ^  ^  ^  ^  ^  ^ u8
   │                                                          │  │  │  │  │  │  │   
   │                                                          │  │  │  │  │  │  u8
   │                                                          │  │  │  │  │  u8
   │                                                          │  │  │  │  u8
   │                                                          │  │  │  u8
   │                                                          │  │  u8
   │                                                          │  u8
   │                                                          u8

note: 
   ┌─ return_complex_struct.fe:42:57
   │
42 │         let complex: BytesComplex = BytesComplex(bytes: [1, 2, 3, 4, 5, 6, 7, 8], outer_x: 30)
   │                                                         ^^^^^^^^^^^^^^^^^^^^^^^^           ^^ i32
   │                                                         │                                   
   │                                                         Array<u8, 8>

note: 
   ┌─ return_complex_struct.fe:42:37
   │
42 │         let complex: BytesComplex = BytesComplex(bytes: [1, 2, 3, 4, 5, 6, 7, 8], outer_x: 30)
   │                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ BytesComplex
43 │         return complex
   │                ^^^^^^^ BytesComplex -Copy-> BytesComplex

note: 
   ┌─ return_complex_struct.fe:46:5
   │  
46 │ ╭     pub fn nested_dynamic_complex(self) -> NestedDynamicComplex {
47 │ │         let bytes_complex: BytesComplex = self.bytes_complex()
48 │ │         let static_complex: StaticComplex = self.static_complex()
49 │ │         let string_complex: StringComplex = self.string_complex()
50 │ │         let complex: NestedDynamicComplex = NestedDynamicComplex(bytes_complex, static_complex, string_complex)
51 │ │         return complex
52 │ │     }
   │ ╰─────^ params: [self] -> NestedDynamicComplex

note: 
   ┌─ return_complex_struct.fe:47:13
   │
47 │         let bytes_complex: BytesComplex = self.bytes_complex()
   │             ^^^^^^^^^^^^^ BytesComplex
48 │         let static_complex: StaticComplex = self.static_complex()
   │             ^^^^^^^^^^^^^^ StaticComplex
49 │         let string_complex: StringComplex = self.string_complex()
   │             ^^^^^^^^^^^^^^ StringComplex
50 │         let complex: NestedDynamicComplex = NestedDynamicComplex(bytes_complex, static_complex, string_complex)
   │             ^^^^^^^ NestedDynamicComplex

note: 
   ┌─ return_complex_struct.fe:47:43
   │
47 │         let bytes_complex: BytesComplex = self.bytes_complex()
   │                                           ^^^^ Foo

note: 
   ┌─ return_complex_struct.fe:47:43
   │
47 │         let bytes_complex: BytesComplex = self.bytes_complex()
   │                                           ^^^^^^^^^^^^^^^^^^^^ BytesComplex
48 │         let static_complex: StaticComplex = self.static_complex()
   │                                             ^^^^ Foo

note: 
   ┌─ return_complex_struct.fe:48:45
   │
48 │         let static_complex: StaticComplex = self.static_complex()
   │                                             ^^^^^^^^^^^^^^^^^^^^^ StaticComplex
49 │         let string_complex: StringComplex = self.string_complex()
   │                                             ^^^^ Foo

note: 
   ┌─ return_complex_struct.fe:49:45
   │
49 │         let string_complex: StringComplex = self.string_complex()
   │                                             ^^^^^^^^^^^^^^^^^^^^^ StringComplex
50 │         let complex: NestedDynamicComplex = NestedDynamicComplex(bytes_complex, static_complex, string_complex)
   │                                                                  ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^ StringComplex -Copy-> StringComplex
   │                                                                  │              │                
   │                                                                  │              StaticComplex -Copy-> StaticComplex
   │                                                                  BytesComplex -Copy-> BytesComplex

note: 
   ┌─ return_complex_struct.fe:50:45
   │
50 │         let complex: NestedDynamicComplex = NestedDynamicComplex(bytes_complex, static_complex, string_complex)
   │                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ NestedDynamicComplex
51 │         return complex
   │                ^^^^^^^ NestedDynamicComplex -Copy-> NestedDynamicComplex


