crates/analyzer/tests/snapshots/analysis__return_division_u256.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ return_division_u256.fe:2:5
  │  
2 │ ╭     pub fn bar(x: u256, y: u256) -> u256 {
3 │ │         return x / y
4 │ │     }
  │ ╰─────^ params: [{ label: None, name: x, typ: u256 }, { label: None, name: y, typ: u256 }] -> u256

note: 
  ┌─ return_division_u256.fe:3:16
  │
3 │         return x / y
  │                ^   ^ u256
  │                │    
  │                u256

note: 
  ┌─ return_division_u256.fe:3:16
  │
3 │         return x / y
  │                ^^^^^ u256


