crates/analyzer/tests/snapshots/analysis__return_gt_u256.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ return_gt_u256.fe:2:5
  │  
2 │ ╭     pub fn bar(x: u256, y: u256) -> bool {
3 │ │         return x > y
4 │ │     }
  │ ╰─────^ self: None, params: [{ label: None, name: x, typ: u256 }, { label: None, name: y, typ: u256 }] -> bool

note: 
  ┌─ return_gt_u256.fe:3:16
  │
3 │         return x > y
  │                ^   ^ u256
  │                │    
  │                u256

note: 
  ┌─ return_gt_u256.fe:3:16
  │
3 │         return x > y
  │                ^^^^^ bool


